# jsulima_GameAIAPI

./: .gitattributes  .gitignore  README.md  fetch_log.txt  pyproject.toml  requirements.txt  rewuirements.txt  setup.py  test2.py
.github/workflows/: deploy.yml
app/: config.py  logging_config.py  main.py  scheduler.py
app/data/MLB/: batter_stats_data(2010-2024).csv  games_data(2010-2024).csv  mlb_historical_data(2010-2013).csv  mlb_historical_data(2010-2024).csv  mlb_historical_data(2014-2016).csv  mlb_historical_data(2017-2019).csv  mlb_historical_data(2020-2024).csv  mlb_injuries.csv  mlb_player_stats.csv  mlb_rosters.csv  pitcher_stats_data(2010-2024).csv  team_stats_yearly.csv
app/data/NFL/: Game_data(historical).csv  all_player_stats.csv  claude.py  game_data(2025).csv  head_to_head.csv  historical_data_2010-2025.csv  main.csv  nfl_all_players_info.json  nfl_games_data_history.csv  (+11 more)
app/schemas/: mlb_schemas.py  nfl_schemas.py
app/services/: helper.py
app/tests/: head_to_head_win_test.py
app/utils/: mlb_player_image.py  player_image_str.py  xml_to_json.py
data/NFL/: historical_player_features_20221001_to_20221015.csv
models/: mlb_away_score_model.joblib  mlb_batting_model.pkl  mlb_fielding_model.pkl  mlb_home_score_model.joblib  mlb_pitcher_model.pkl  mlb_score_scaler.joblib  mlb_winner_model.joblib  mlb_winner_scaler.joblib  nfl_lineup_model.pkl  nfl_top_performer_model.pkl  nfl_win_percentage_xgb.pkl
models/MLB/: mlb_away_score_regressor.pkl  mlb_home_score_regressor.pkl  mlb_top_batter.pkl  mlb_win_classifier.pkl  mlb_win_percentage_xgb.pkl
(+85 files in other folders)
